tests/paczka1/small_fuzzy/61407647.err
Error in line 9: YdvhK7S S594 7,3
Error in line 4: e42mDJ3nGgj S324 0,8
Error in line 14: e42mDJ3nGgj S594 30,6
